--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,7 +2,20 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@openzeppelin/contracts": "^5.0.0",
-    "hardhat": "^2.18.1"
-  }
+    "@openzeppelin/contracts": "^4.9.3",
+    "hardhat": "^2.18.3",
+    "hardhat-ethers": "^1.0.1"
+  },
+  "description": "Try running some of the following tasks:",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
